Terms & Conditions 'X' close button alignment issue for AR site.

--- a/src/component/CartCouponTermsAndConditions/CartCouponTermsAndConditions.style.scss
+++ b/src/component/CartCouponTermsAndConditions/CartCouponTermsAndConditions.style.scss
@@ -163,6 +163,10 @@
         }
         &_isArabic {
             float: left;
+            &:before {
+                right: -15px;
+                top: 7px;
+            }
         }
     }
 }
